# hf-trading

./: .env.example  .gitignore  AGENTOPS_SPEC.md  CLAUDE.md  HFT_Crypto_Estrategia_Documento_Final.md  pyproject.toml  run_bot.sh
agentops/: adjuster.py  analyzer.py  history.py  runner.py  safety.py
backtest/: run_backtest.py
config/: btc_maker.py
docs/superpowers/plans/: 2026-06-13-hft-crypto-mvp.md  2026-06-14-agentops.md
docs/superpowers/specs/: 2026-06-13-hft-crypto-mvp-design.md
live/: analyze_trading.py  order_logger.py  run_testnet.py
signals/: microstructure.py
strategy/: as_maker.py
tests/agentops/: test_adjuster.py  test_analyzer.py  test_history.py  test_overrides.py  test_runner.py  test_safety.py
tests/fixtures/: book_data.py
tests/integration/: test_backtest_run.py
tests/signals/: test_microstructure.py
