[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hft-crypto-mvp"
version = "0.1.0"
description = "ASMicroPriceMaker en NautilusTrader — BTC/USDT-M Futures"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
nautilus_trader = ">=1.200.0"
pandas = ">=2.2"
numpy = ">=1.26"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
